--- a/app/views/agencies/edit.html.erb
+++ b/app/views/agencies/edit.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :title, t("shared.scaffold.edit.title", model: "Agency") %>
 <%= content_for :title, "Agencies ##{@agency.id}" %>
 <%= turbo_stream_from @agency %>
-<div class="flex flex-1 flex-col">
+<div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
