--- a/app/views/agencies/show.html.erb
+++ b/app/views/agencies/show.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :title, "Agencies ##{@agency.name}" %>
 <%= turbo_stream_from @agency %>
-<div class="flex flex-1 flex-col">
+<div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
     <div class="py-6">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
