Add inline editable feature for Appointment's status

--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -1,7 +1,7 @@
 <%= content_for :title, "Appointments ##{@appointment.ref_number}" %>
 <%= turbo_stream_from @appointment %>
 <%= render partial: 'shared/sidenav' %>
-<div class="flex flex-1 flex-col md:pl-64">
+<div class="flex flex-1 flex-col md:pl-64" data-controller="appointments">
   <main class="flex-1">
     <div class="py-6">
       <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
