--- a/app/views/appointments/_appointment.html.erb
+++ b/app/views/appointments/_appointment.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id appointment %>" class="overflow-hidden bg-white shadow sm:rounded-lg">
+<div id="<%= dom_id appointment %>" class="overflow-hidden bg-white shadow sm:rounded-lg mainAppointmentContainer">
   <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
     <dl class="sm:divide-y sm:divide-gray-200">
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
@@ -8,9 +8,7 @@
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-tokanisecondary-600">Status</dt>
           <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"> 
-          <%= appointment.status.titleize %>
-          <a href="#" class="btn btn-primary btn-small mx-2">Mark as Completed</a>
-          <a href="#" class="btn btn-danger btn-small">Mark as Cancelled</a>
+            <span id="appointmentStatus" data-action="click->appointments#handleStatusEditableBehaviour"><%= appointment.status.titleize %></span>
           </dd>
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
