Extract invite_user partial for Requestors & Interpreters

--- a/app/views/requestors/index.html.erb
+++ b/app/views/requestors/index.html.erb
@@ -1,4 +1,7 @@
 <%= render partial: 'shared/sidenav' %>
+
+<%= render(partial: "shared/invite_user") %>
+
 <div>
   <div class="flex flex-1 flex-col md:pl-64">
     <main class="flex-1">
