--- a/app/views/interpreter_details/_form.html.erb
+++ b/app/views/interpreter_details/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: interpreter_detail) do |form| %>
-<%= render "shared/error_messages", resource: form.object %>
+  <%= render "shared/error_messages", resource: form.object %>
   <div class="mt-10 sm:mt-0">
     <div class="md:grid md:grid-cols-3 md:gap-6">
       <div class="md:col-span-1">
@@ -128,109 +128,122 @@
       </div>
     </div>
   </div>
-  <% end %>
-  <div class="hidden sm:block" aria-hidden="true">
-    <div class="py-5">
-      <div class="border-t border-gray-200"></div>
-    </div>
-  </div>
+<% end %>
 
-  <div class="mt-10 sm:mt-0">
-    <div class="md:grid md:grid-cols-3 md:gap-6">
-      <div class="md:col-span-1">
-        <div class="px-4 sm:px-0">
-          <h3 class="text-lg font-medium leading-6 text-gray-900">Notifications</h3>
-          <p class="mt-1 text-sm text-gray-600">Decide which communications you'd like to receive and how.</p>
-        </div>
+<div class="hidden sm:block" aria-hidden="true">
+  <div class="py-5">
+    <div class="border-t border-gray-200"></div>
+  </div>
+</div>
+
+<div class="mt-10 sm:mt-0">
+  <div class="md:grid md:grid-cols-3 md:gap-6">
+    <div class="md:col-span-1">
+      <div class="px-4 sm:px-0">
+        <h3 class="text-lg font-medium leading-6 text-gray-900">Notifications</h3>
+        <p class="mt-1 text-sm text-gray-600">Decide which communications you'd like to receive and how.</p>
       </div>
-      <div class="mt-5 md:col-span-2 md:mt-0">
-        <form action="#" method="POST">
-          <div class="overflow-hidden shadow sm:rounded-md">
-            <div class="space-y-6 bg-white px-4 py-5 sm:p-6">
-                <fieldset>
-                    <legend class="text-base font-medium text-gray-900">By Email</legend>
-                    <div class="mt-4 space-y-4">
+    </div>
+    <div class="mt-5 md:col-span-2 md:mt-0">
+      <%
+      if @notification_setting.new_record?
+        url = notification_settings_path
+        method_name = :post
+      else
+        url = notification_setting_path(@notification_setting)
+        method_name = :put
+      end
+      %>
+
+      <%= form_with(model: @notification_setting, url: url, method: method_name) do |form| %>
+        <div class="overflow-hidden shadow sm:rounded-md">
+          <div class="space-y-6 bg-white px-4 py-5 sm:p-6">
+              <fieldset>
+                  <legend class="text-base font-medium text-gray-900">By Email</legend>
+                  <div class="mt-4 space-y-4">
+                    <div class="flex items-start">
+                      <div class="flex h-5 items-center">
+                        <%= form.check_box(:appointment_offered, { class: 'h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500' }) %>
+                      </div>
+                      <div class="ml-3 text-sm">
+                        <label for="notification_setting_appointment_offered" class="font-medium text-gray-700">Appointments Offered</label>
+                      </div>
+                    </div>
+                    <div>
                       <div class="flex items-start">
                         <div class="flex h-5 items-center">
-                          <input id="offered" name="offered" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500">
+                          <%= form.check_box(:appointment_scheduled, { class: 'h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500' }) %>
                         </div>
                         <div class="ml-3 text-sm">
-                          <label for="offered" class="font-medium text-gray-700">Appointments Offered</label>
-                        </div>
-                      </div>
-                      <div>
-                        <div class="flex items-start">
-                          <div class="flex h-5 items-center">
-                            <input id="scheduled" name="scheduled" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500">
-                          </div>
-                          <div class="ml-3 text-sm">
-                              <label for="scheduled" class="font-medium text-gray-700">Appointments Scheduled</label>
-                          </div>
-                        </div>
-                      </div>
-                      <div>
-                        <div class="flex items-start">
-                          <div class="flex h-5 items-center">
-                            <input id="cancelled" name="cancelled" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500">
-                          </div>
-                          <div class="ml-3 text-sm">
-                              <label for="cancelled" class="font-medium text-gray-700">Appointments Cancelled</label>
-                          </div>
-                        </div>
-                      </div>
-                      <div>
-                        <div class="flex items-start">
-                          <div class="flex h-5 items-center">
-                            <input id="edited" name="edited" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500">
-                          </div>
-                          <div class="ml-3 text-sm">
-                            <label for="edited" class="font-medium text-gray-700">Appointments Edited</label>
-                          </div>
-                        </div>
-                        </div>
-                        <div>
-                        <div class="flex items-start">
-                          <div class="flex h-5 items-center">
-                            <input id="checklist" name="checklist" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500">
-                          </div>
-                          <div class="ml-3 text-sm">
-                            <label for="checklist" class="font-medium text-gray-700">Checklist Items</label>
-                            <p class="text-gray-500">Get notified when a checklist item will soon expire.</p>
-                          </div>
+                          <label for="notification_setting_appointment_scheduled" class="font-medium text-gray-700">Appointments Scheduled</label>
                         </div>
                       </div>
                     </div>
-                </fieldset>
-                <fieldset class="mt-6">
-                    <legend class="text-base font-medium text-gray-900">Push Notifications</legend>
-                    <p class="text-sm text-gray-500">These are delivered via SMS to your mobile phone.</p>
-                    <div class="mt-4 space-y-4">
-                      <div class="flex items-center">
-                        <input id="push-everything" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500">
-                        <label for="push-everything" class="ml-3">
-                          <span class="block text-sm font-medium text-gray-700">Everything</span>
-                        </label>
-                      </div>
-                      <div class="flex items-center">
-                        <input id="push-email" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500">
-                        <label for="push-email" class="ml-3">
-                          <span class="block text-sm font-medium text-gray-700">Same as email</span>
-                        </label>
-                      </div>
-                      <div class="flex items-center">
-                        <input id="push-nothing" name="push-notifications" type="radio" class="h-4 w-4 border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500">
-                        <label for="push-nothing" class="ml-3">
-                          <span class="block text-sm font-medium text-gray-700">No push notifications</span>
-                        </label>
+                    <div>
+                      <div class="flex items-start">
+                        <div class="flex h-5 items-center">
+                          <%= form.check_box(:appointment_cancelled, { class: 'h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500' }) %>
+                        </div>
+                        <div class="ml-3 text-sm">
+                          <label for="notification_setting_appointment_cancelled" class="font-medium text-gray-700">Appointments Cancelled</label>
+                        </div>
                       </div>
                     </div>
-                </fieldset>
-            </div>
-            <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
-              <button type="submit" class="inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2">Save</button>
-            </div>
+                    <!-- not needed for MVP
+                    <div>
+                      <div class="flex items-start">
+                        <div class="flex h-5 items-center">
+                          <input id="edited" name="edited" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500">
+                        </div>
+                        <div class="ml-3 text-sm">
+                          <label for="edited" class="font-medium text-gray-700">Appointments Edited</label>
+                        </div>
+                      </div>
+                      </div>
+                      <div>
+                      <div class="flex items-start">
+                        <div class="flex h-5 items-center">
+                          <input id="checklist" name="checklist" type="checkbox" class="h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500">
+                        </div>
+                        <div class="ml-3 text-sm">
+                          <label for="checklist" class="font-medium text-gray-700">Checklist Items</label>
+                          <p class="text-gray-500">Get notified when a checklist item will soon expire.</p>
+                        </div>
+                      </div>
+                    </div>
+                  -->
+                  </div>
+              </fieldset>
+              <fieldset class="mt-6">
+                  <legend class="text-base font-medium text-gray-900">Push Notifications</legend>
+                  <p class="text-sm text-gray-500">These are delivered via SMS to your mobile phone.</p>
+                  <div class="mt-4 space-y-4">
+                    <div class="flex items-center">
+                      <%= form.radio_button :sms, "everything", checked: (@notification_setting.sms == "everything"), class: "h-4 w-4 border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>
+                      <label for="notification_setting_sms_everything" class="ml-3">
+                        <span class="block text-sm font-medium text-gray-700">Everything</span>
+                      </label>
+                    </div>
+                    <div class="flex items-center">
+                      <%= form.radio_button :sms, "same_as_email", checked: (@notification_setting.sms == "same_as_email"), class: "h-4 w-4 border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>
+                      <label for="notification_setting_sms_same_as_email" class="ml-3">
+                        <span class="block text-sm font-medium text-gray-700">Same as email</span>
+                      </label>
+                    </div>
+                    <div class="flex items-center">
+                      <%= form.radio_button :sms, "no_sms", checked: (@notification_setting.sms == "no_sms") , class: "h-4 w-4 border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>
+                      <label for="notification_setting_sms_no_sms" class="ml-3">
+                        <span class="block text-sm font-medium text-gray-700">No push notifications</span>
+                      </label>
+                    </div>
+                  </div>
+              </fieldset>
           </div>
-        </form>
-      </div>
+          <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
+            <%= form.submit 'Save', class: "inline-flex justify-center rounded-md border border-transparent bg-tokanisecondary-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2" %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
+</div>
