--- a/app/views/shared/_interpreter_sidenav.html.erb
+++ b/app/views/shared/_interpreter_sidenav.html.erb
@@ -73,7 +73,7 @@
             <i class="fa-regular fa-gauge fa-xl <%= int_dashboard_highlight_icon? %> mr-3 flex-shrink-0"></i>
             Dashboard
           <% end %>
-          <a href="/interpreters/public" data-action='click->toggle#toggle touch->toggle#toggle' class="<%= sidenav_highlight?('interpreters', ["public", "my_assigned", "my_scheduled"], type: "link") %> group flex items-center px-2 py-2 text-sm font-medium rounded-md">
+          <a href="<%= appointments_interpreters_path %>" data-action='click->toggle#toggle touch->toggle#toggle' class="<%= sidenav_highlight?('interpreters', ["public", "my_assigned", "my_scheduled"], type: "link") %> group flex items-center px-2 py-2 text-sm font-medium rounded-md">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="<%= sidenav_highlight?('interpreters', ["public", "my_assigned", "my_scheduled"], type: "icon") %> mr-3 flex-shrink-0 h-6 w-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12.75V12A2.25 2.25 0 014.5 9.75h15A2.25 2.25 0 0121.75 12v.75m-8.69-6.44l-2.12-2.12a1.5 1.5 0 00-1.061-.44H4.5A2.25 2.25 0 002.25 6v12a2.25 2.25 0 002.25 2.25h15A2.25 2.25 0 0021.75 18V9a2.25 2.25 0 00-2.25-2.25h-5.379a1.5 1.5 0 01-1.06-.44z" />
             </svg>
