--- a/app/views/shared/_left_nav.html.erb
+++ b/app/views/shared/_left_nav.html.erb
@@ -8,3 +8,5 @@
 <%= nav_link_to "Providers", providers_path, class: "nav-link" %>
 <%= nav_link_to "Recipients", recipients_path, class: "nav-link" %>
 <%= nav_link_to "Customer Categories", customer_categories_path, class: "nav-link" %>
+<%= nav_link_to "Bill Rates", bill_rates_path, class: "nav-link" %>
+<%= nav_link_to "Pay Rates", pay_rates_path, class: "nav-link" %>
