--- a/app/views/agencies/index.html.erb
+++ b/app/views/agencies/index.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :title, "Agencies" %>
 <%= turbo_stream_from :agencies %>
-<div class="flex flex-1 flex-col md:pl-64">
+<div class="flex flex-1 flex-col">
 	<main class="flex-1">
 	  <div class="py-6">
 		  <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-6">
