Initiate Customers Interface (#235)
* Add Sites CRUD for customers

* Add Requestor CRUD for customers (WIP)

* Complete Requestors CRUD

* Configure Providers CRUD for customers

* Configure Recipients CRUD for customers

* Minor quote change

* Invite Users Page
Completed / Cancelled buttons on Appointment show page
Overview Widgets added on Appointment Index Page

* Configure Appointments CRUD for customers

* Enable Appointments by status view

* Add inline editable feature for Appointment's status

* Extract invite_user partial for Requestors & Interpreters

* Minor heirarchy fix

* Quick fix (#255)

* current appt status

* current status works and gets updated properly

* lint fix

* fixing some divs on my scheduled details view

* [TK-221] Interpreter Portal - Notification Settings (#256)

* [TK-221] Interpreter Portal - Notification Settings

* standardrb fixes

* main to interpreter notifications settings

---------

Co-authored-by: Spencer Norman <spencerdnorman@gmail.com>

* [TK-221] Interpreter Portal - Notification Settings

* Add Sites CRUD for customers

* Add Requestor CRUD for customers (WIP)

* Configure Recipients CRUD for customers

* Configure Appointments CRUD for customers

* lint fix

* lint fix

* Remove native stats data

* Add appointment show link

* Fetch available statuses for dropdown for logged-in account (Inline editing)

* Modify JS controller (WIP)

* lint fix

* Minor fix

* Remove selected key from element

---------

Co-authored-by: imranhayat <imran.hayat92@gmail.com>
Co-authored-by: Spencer Norman <spencerdnorman@gmail.com>
Co-authored-by: Shanti Braford <shantibraford@gmail.com>

--- a/app/views/appointments/_appointment.html.erb
+++ b/app/views/appointments/_appointment.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id appointment %>" class="overflow-hidden bg-white shadow sm:rounded-lg">
+<div id="<%= dom_id appointment %>" class="overflow-hidden bg-white shadow sm:rounded-lg mainAppointmentContainer">
   <div class="border-t border-gray-200 px-4 py-5 sm:p-0">
     <dl class="sm:divide-y sm:divide-gray-200">
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
@@ -7,7 +7,10 @@
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-tokanisecondary-600">Status</dt>
-          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0"> <%= appointment.status.titleize %></dd>
+          <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
+            <%= select_tag("appointmentStatusDropdown", options_for_select(@appt_statuses.map{ |k, v| [k.capitalize, v] }), { style: "display: none;" }) %>
+            <span id="appointmentStatus" data-action="click->appointments#handleStatusEditableBehaviour"><%= appointment.status.titleize %></span>
+          </dd>
       </div>
       <div class="py-4 sm:grid sm:grid-cols-3 sm:gap-4 sm:py-5 sm:px-6">
         <dt class="text-sm font-medium text-tokanisecondary-600">Start Time</dt>
