--- a/app/views/interpreters/index.html.erb
+++ b/app/views/interpreters/index.html.erb
@@ -1,3 +1,9 @@
+<!-- Invite User Page -->
+
+<%= render partial: "shared/sidenav" %>
+
+<%= render(partial: "shared/invite_user") %>
+
 <%= content_for :title, "Interpreters" %>
 
 <div>
