Initiate Customers Interface (#235)
* Add Sites CRUD for customers

* Add Requestor CRUD for customers (WIP)

* Complete Requestors CRUD

* Configure Providers CRUD for customers

* Configure Recipients CRUD for customers

* Minor quote change

* Invite Users Page
Completed / Cancelled buttons on Appointment show page
Overview Widgets added on Appointment Index Page

* Configure Appointments CRUD for customers

* Enable Appointments by status view

* Add inline editable feature for Appointment's status

* Extract invite_user partial for Requestors & Interpreters

* Minor heirarchy fix

* Quick fix (#255)

* current appt status

* current status works and gets updated properly

* lint fix

* fixing some divs on my scheduled details view

* [TK-221] Interpreter Portal - Notification Settings (#256)

* [TK-221] Interpreter Portal - Notification Settings

* standardrb fixes

* main to interpreter notifications settings

---------

Co-authored-by: Spencer Norman <spencerdnorman@gmail.com>

* [TK-221] Interpreter Portal - Notification Settings

* Add Sites CRUD for customers

* Add Requestor CRUD for customers (WIP)

* Configure Recipients CRUD for customers

* Configure Appointments CRUD for customers

* lint fix

* lint fix

* Remove native stats data

* Add appointment show link

* Fetch available statuses for dropdown for logged-in account (Inline editing)

* Modify JS controller (WIP)

* lint fix

* Minor fix

* Remove selected key from element

---------

Co-authored-by: imranhayat <imran.hayat92@gmail.com>
Co-authored-by: Spencer Norman <spencerdnorman@gmail.com>
Co-authored-by: Shanti Braford <shantibraford@gmail.com>

--- a/app/views/recipients/_form.html.erb
+++ b/app/views/recipients/_form.html.erb
@@ -52,12 +52,15 @@
                   </div> 
                 </div>
               </div>
-              <div class="col-span-3 sm:col-span-6">
-                <div class="form-group">
-                  <%= form.label "Customer*", class: "block text-sm font-medium text-gray-700" %>
-                  <%= form.select :customer_id,  options_from_collection_for_select(account_customers, :id, :name, recipient.customer_id ), {prompt: "Select A Customer..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'provider_site_id', select_group_select_clear_target_param: 'provider_department_id' }} %> 
+
+              <% unless customer_logged_in? %>
+                <div class="col-span-3 sm:col-span-6">
+                  <div class="form-group">
+                    <%= form.label "Customer*", class: "block text-sm font-medium text-gray-700" %>
+                    <%= form.select :customer_id,  options_from_collection_for_select(account_customers, :id, :name, recipient.customer_id ), {prompt: "Select A Customer..."}, {class: 'form-control',  data: {action: 'change->select-group#updateSelectRemote', select_group_url_param: select_list_sites_path, select_group_select_key_param: 'customer_id', select_group_select_update_target_param: 'provider_site_id', select_group_select_clear_target_param: 'provider_department_id' }} %> 
+                  </div>
                 </div>
-              </div>
+              <% end %>
             </div>
           </div>
           <br>
