--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -7,7 +7,7 @@
           <div class="grid grid-cols-6 gap-6">
             <% if @site.new_record? %>
               <div class="lg:col-span-3 sm:col-span-6">
-                <%= form.label :customer_id, "Agency Customer*" %>
+                <%= form.label :customer_id, "Agency customer*" %>
                 <%= form.select :customer_id, options_from_collection_for_select(@customers, :id, :name, @customer_id), {prompt: "Please select A Customer"}, {class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"} %>
               </div>
           <% else %>
