--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -35,7 +35,7 @@
                   </div>
                   <div class="bg-gray-50 px-5 py-3">
                     <div class="text-sm">
-                      <a href="<%= appointments_path %>" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                      <a href="<%= appointments_path %>" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                     </div>
                   </div>
                 </div>
@@ -61,7 +61,7 @@
                   </div>
                   <div class="bg-gray-50 px-5 py-3">
                     <div class="text-sm">
-                      <a href="<%= appointments_path(status: 'scheduled') %>" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                      <a href="<%= appointments_path(status: 'scheduled') %>" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                     </div>
                   </div>
                 </div>
@@ -87,7 +87,7 @@
                   </div>
                   <div class="bg-gray-50 px-5 py-3">
                     <div class="text-sm">
-                      <a href="<%= appointments_path(status: 'finished') %>" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                      <a href="<%= appointments_path(status: 'finished') %>" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                     </div>
                   </div>
                 </div>
