--- a/app/views/dashboard/agency.html.erb
+++ b/app/views/dashboard/agency.html.erb
@@ -31,7 +31,7 @@
                 </div>
                 <div class="bg-gray-50 px-5 py-3">
                   <div class="text-sm">
-                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                   </div>
                 </div>
               </div>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="bg-gray-50 px-5 py-3">
                   <div class="text-sm">
-                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                   </div>
                 </div>
               </div>
@@ -83,7 +83,7 @@
                 </div>
                 <div class="bg-gray-50 px-5 py-3">
                   <div class="text-sm">
-                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900">View all</a>
+                    <a href="#" class="font-medium text-cyan-700 hover:text-cyan-900 p-2">View all</a>
                   </div>
                 </div>
               </div>
